--- a/02/index.html
+++ b/02/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body>
-    <title></title>
-</body>
 <head>
-
-<p> hola ! </p>
-
+	<title>Ejercicio 2</title>
 </head>
+<body>
+    <p> hola ! </p>
+</body>
+
 </html>
