--- a/10/index.html
+++ b/10/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Ejercicio 10</title>
+	<meta charset="utf-8">
 </head>
 <body>
-	<p color="red"> Párrafo rojo </p>
+	<p style="color:red"> Párrafo rojo </p>
 </body>
 </html>
