--- a/11/index.html
+++ b/11/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<title></title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="https://bootswatch.com/4/superhero/bootstrap.min.css">
 </head>
 <body>
 
-	<p style="color:red> Párrafo rojo </p>
+	<p style="color:red"> Párrafo rojo </p>
 
 </body>
 </html>
