--- a/18/index.html
+++ b/18/index.html
@@ -5,6 +5,7 @@
     <title> 2 errores </title>
 </head>
 <body>
-    <p style="calor:red background-color:black"> ¿Los encontraste? </p>
+    <p style="background-color:black; color:red"> ¿Los encontraste? </p>
+
 </body>
 </html>
