--- a/20/index.html
+++ b/20/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<style type="text/css">
+		p {color: green}
+	</style>
     <head> Go Green </head>
 </head>
 <body>
