--- a/25/index.html
+++ b/25/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-	<img src="../images/logo.png" alt="logo desafio latam" >
-	<img src="../images/logo.png" alt="logo desafio latam" >
+	<img src="../images/logo.png" style="height: 500px; width: 500px" alt="logo desafio latam" >
+	<img src="../images/logo.png" style="max-height: 500px; max-width: 500px" alt="logo desafio latam" >
 
 </body>
 </html>
